--- a/src/base.module.css
+++ b/src/base.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap');
+
 :root {
   --white: #FFFFFF;
   --pink: #F67599;
