--- a/src/components/Step2.module.css
+++ b/src/components/Step2.module.css
@@ -53,7 +53,7 @@
   line-height: 20px;
 }
 
-input[id="shipping-dhl"] ~.radio__info .text {
+input[id=shipping-dhl] ~.radio__info .text {
   font-weight:700;
 }
 
